@@ -3,8 +3,12 @@ wajig (2.3) unstable; urgency=low
   * Add bash file completion. Useful for INSTALL command.
   * DOWNLOAD: improve description. (Closes: #627173)
   * FILE-INSTALL, FILE-REMOVE, FILE-DOWNLOAD: fix bugs.
+  * REMOVE, PURGE: add --noauth option, to avoid cases where a package would
+    be downloaded when there's an anuthenticated version available; this
+    happens in a case where when removing/purging a package leaves a void
+    where APT want to be smart/convenient, and install a replacement.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 21 Jun 2011 02:35:20 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 21 Dec 2011 13:00:00 +0200
 
 wajig (2.2) unstable; urgency=low
 
